# artifacts/api-server/src/routes/index.ts
@@ -4,12 +4,12 @@ import notesRouter from "./notes";
 import quizzesRouter from "./quizzes";
 import tasksRouter from "./tasks";
 import dashboardRouter from "./dashboard";
-import openaiRouter from "./openai/index";
+import geminiRouter from "./gemini/index";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(openaiRouter);
+router.use(geminiRouter);
 router.use(notesRouter);
 router.use(quizzesRouter);
 router.use(tasksRouter);
